# Rustchain

./: .env.example  .gitattributes  .gitignore  ACHIEVEMENTS.md  API_WALKTHROUGH.md  BOUNTY_1524_COMMIT_REPORT.md  BOUNTY_1524_VALIDATION_RESULT.json  BOUNTY_2275_FORMAL_VERIFICATION.md  BOUNTY_2301_IMPLEMENTATION.md  BOUNTY_COMPLETION_REPORT.md  BOUNTY_CONTRIBUTION.md  CONTRIBUTING.md  CONTRIBUTORS.md  CPU_ANTIQUITY_SYSTEM.md  CPU_QUICK_REFERENCE.md  DOCKER_DEPLOYMENT.md  Dockerfile  Dockerfile.miner  FAUCET.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  LEDGER_INTEGRITY_AUDIT.md  PULL_REQUEST_TEMPLATE.md  README.md  README.zh-CN.md  README_DE.md  README_ES.md  README_HI.md  README_JA.md  README_ZH-TW.md  README_ZH.md  README_monitoring.md  RustChain_API.postman_collection.json  SECURITY.md  START_HERE.md  VERIFICATION_BOUNTY_1524.md  VINTAGE_CPU_QUICK_REFERENCE.md  agent_economy_sdk.py  agent_reputation.py  agent_sdk_demo.py  (+42 more)
.github/: dependabot.yml  labeler.yml
agent-economy-demo/: autonomous_pipeline.py  test_pipeline.py
airdrop/: README.md  index.html
bridge/: README.md  __init__.py  bridge_api.py  test_bridge_api.py
dashboard/: index.html
data/: projects.json
devlog/: DEVELOPMENT_LOG.md
docs/: API.md  API_WALKTHROUGH.md  BEACON_CERTIFIED_OPEN_SOURCE.md  BOUNTY_1490_FIX.md  BOUNTY_1512_IMPLEMENTATION_REPORT.md  BOUNTY_1524_IMPLEMENTATION.md  BOUNTY_1524_VALIDATION.md  BOUNTY_2313_IMPLEMENTATION.md  CLAIMS_GUIDE.md  CONSOLE_MINING_SETUP.md  CONTRIBUTING.md  CONTRIBUTING_FOR_AGENTS.md  CROSS_NODE_SYNC_VALIDATOR.md  DEVELOPER_QUICKSTART.md  DEVELOPER_TRACTION_Q1_2026.md  DISCORD_LEADERBOARD_BOT.md  FAQ.md  FAQ_TROUBLESHOOTING.md  FIX_1147_ATTEST_SUBMIT_CRASH.md  GLOSSARY.md  INSTALLATION_WALKTHROUGH.md  ISSUE_1449_ANTI_DOUBLE_MINING.md  ISSUE_2127_DEPLOYMENT.md  MECHANISM_SPEC_AND_FALSIFICATION_MATRIX.md  MINING_GUIDE.md  PAYOUT_PREFLIGHT.md  PREMINE_COMPLETION_RESOLUTION.md  PROTOCOL.md  PROTOCOL_BOUNTY_8.md  PROTOCOL_v1.1.md  README.md  REWARD_ANALYTICS_DASHBOARD.md  RIP-305-cross-chain-airdrop.md  RIP305_AIRDROP_V2.md  RUSTCHAIN_DEVELOPER_TUTORIAL.md  RUSTCHAIN_VS_ETHEREUM_POS_COMPARISON.md  SECURITY_AUDIT.md  TESTNET_FAUCET.md  UPGRADE_MIGRATION_GUIDE.md  US_REGULATORY_POSITION.md  (+24 more)
explorer/: ACCESSIBILITY_AUDIT.md  CLAUDE.md  SECURITY_REPORT.md  app.py  dashboard.html  enhanced-explorer.html  hall_of_rust.py  index.html  miner-dashboard.html  rustchain_dashboard.py  test.html
extension/: README.md
integrations/bottube-mcp-server/: README.md  __init__.py  bottube_mcp_server.py  pyproject.toml
integrations/bottube-mcp-server/tests/: __init__.py  test_bottube_mcp_server.py
integrations/rustchain-mcp/: IMPLEMENTATION_REPORT.md  README.md  USAGE.md  __init__.py  client.py  mcp_server.py  pyproject.toml  requirements.txt  schemas.py
integrations/rustchain-mcp/tests/: __init__.py  conftest.py  test_client.py  test_mcp_server.py  test_schemas.py
loadtest/: README.md  REPORT.md  k6_script.js  locustfile.py  requirements.txt
miners/: README.md  checksums.sha256
monitoring/: Dockerfile.exporter  Dockerfile.exporter-rust  README.md  RUNBOOK.md  alerts.yml  docker-compose.yml  grafana-dashboard.json  ledger_verify.py  prometheus.yml  requirements.txt  rustchain-exporter.py
monitoring/exporter-rust/: Cargo.toml
monitoring/exporter-rust/src/: collector.rs  config.rs  error.rs  lib.rs  main.rs  metrics.rs  server.rs
node/: README_FINGERPRINT_PREFLIGHT.md  __init__.py  airdrop_v2.py  anti_double_mining.py  arch_cross_validation.py  auto_epoch_settler.py  bcos_pdf.py  bcos_routes.py  beacon_anchor.py  beacon_api.py  beacon_x402.py  bridge_api.py  claims_eligibility.py  claims_settlement.py  claims_submission.py  consensus_probe.py  ed25519_config.py  ergo_miner_anchor.py  ergo_raw_tx.py  fingerprint_checks.py  governance.py  gpu_render_endpoints.py  hall_of_rust.py  hardware_binding_v2.py  lock_ledger.py  payout_preflight.py  payout_worker.py  rewards_implementation_rip200.py  rip_200_round_robin_1cpu1vote.py  rip_node_sync.py  run_anchor_service.py  rustchain_bft_consensus.py  rustchain_blockchain_integration.py  rustchain_download_page.py  rustchain_download_server.py  rustchain_ergo_anchor.py  rustchain_hardware_database.py  rustchain_p2p_gossip.py  rustchain_p2p_init.py  rustchain_p2p_sync.py  (+14 more)
onboard/: index.js  package.json
otc-bridge/: Dockerfile  README.md  otc_bridge.py  test_otc_bridge.py
payment-widget/: CLAUDE.md  SECURITY_REPORT.md
react-native-wallet/: .env.example  .eslintrc.js  .gitignore  README.md  SETUP_GUIDE.md  app.json  jest.config.js  jest.setup.ts  package-lock.json  package.json
rips/: Cargo.toml
rust-tools/: README.md
rust-tools/examples/cli-wallet/: Cargo.toml
rust-tools/examples/rustchain-sdk/: Cargo.toml
rustchain-wallet/: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md
rustchainnode/: README.md  pyproject.toml
rustchainnode/rustchainnode/: __init__.py  cli.py  hardware.py  node.py
sdk/: LICENSE  MANIFEST.in  README.md  TEST_RESULTS.txt  example.py  pyproject.toml  setup.py  test_live_api.py
sdk/python/: README.md  requirements.txt  setup.py  test_rustchain_sdk.py
sdk/python/rustchain_sdk/: __init__.py  cli.py  client.py  exceptions.py
sdk/rustchain/: __init__.py  client.py  exceptions.py
sdk/tests/: __init__.py  test_client_integration.py  test_client_unit.py
snap/: README.md  (+2 more)
tools/cli-wallet/: Cargo.toml  README.md
tools/cli-wallet/src/: main.rs
tools/comment-moderation-bot/: .env.example  .gitignore  README.md  pyproject.toml
tools/comment-moderation-bot/docs/: GITHUB_APP_SETUP.md
tools/comment-moderation-bot/src/: __init__.py  audit_logger.py  config.py  feature_extractor.py  github_auth.py  github_client.py  idempotency.py  main.py  moderation_service.py  scorer.py  webhook.py  whitelist.py
tools/comment-moderation-bot/tests/: __init__.py  conftest.py  test_audit_logger_auth.py  test_feature_extractor.py  test_idempotency_whitelist.py  test_moderation_service.py  test_scorer.py  test_webhook.py
tools/floppy-witness/: Cargo.toml  README.md
tools/floppy-witness/src/: main.rs
(+551 files in other folders)
