[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rustchainnode"
version = "0.1.0"
description = "pip-installable RustChain attestation node — init, start, stop, status, dashboard"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Elyan Labs", email = "elyan@rustchain.ai"},
]
keywords = ["rustchain", "blockchain", "attestation", "node", "crypto", "mining"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Distributed Computing",
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "flask>=3.0"]

[project.urls]
Homepage = "https://rustchain.ai"
Repository = "https://github.com/Scottcjn/Rustchain"
Issues = "https://github.com/Scottcjn/rustchain-bounties/issues/757"

[project.scripts]
rustchainnode = "rustchainnode.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rustchainnode*"]
