[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bottube-mcp-server"
version = "1.0.0"
description = "BoTTube MCP Server - Model Context Protocol server for BoTTube AI video platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "RustChain Contributors", email = "scott@rustchain.org"}
]
keywords = [
    "mcp",
    "bottube",
    "ai",
    "video",
    "blockchain",
    "rustchain",
    "rtc",
    "model-context-protocol"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
bottube-mcp-server = "bottube_mcp_server:main"

[project.urls]
Homepage = "https://github.com/Scottcjn/RustChain/tree/main/integrations/bottube-mcp-server"
Documentation = "https://github.com/Scottcjn/RustChain/tree/main/integrations/bottube-mcp-server#readme"
Repository = "https://github.com/Scottcjn/RustChain"
Issues = "https://github.com/Scottcjn/RustChain/issues"

[tool.setuptools]
py-modules = ["bottube_mcp_server"]

[tool.setuptools.package-dir]
"" = "."

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["bottube_mcp_server"]
