[package]
name = "rustchain-exporter"
version = "0.1.0"
edition = "2021"
authors = ["Flamekeeper Scott <scott@rustchain.net>", "RustChain Contributors"]
description = "Prometheus metrics exporter for RustChain nodes"
license = "MIT"
repository = "https://github.com/Scottcjn/Rustchain"
keywords = ["prometheus", "metrics", "blockchain", "rustchain", "monitoring"]
categories = ["development-tools", "monitoring"]

[dependencies]
# Prometheus client
prometheus = "0.13"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP server
hyper = { version = "0.14", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for fetching node metrics
reqwest = { version = "0.11", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time
chrono = "0.4"

# Configuration
dotenvy = "0.15"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.0"

[[bin]]
name = "rustchain-exporter"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
