# SPDX-License-Identifier: MIT

[package]
name = "cli-wallet"
version = "0.1.0"
edition = "2021"
authors = ["RustChain Contributors"]
description = "RustChain CLI wallet for send/receive/balance operations"
license = "MIT"
repository = "https://github.com/Scottcjn/Rustchain"
keywords = ["rustchain", "wallet", "cli", "cryptocurrency", "blockchain"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
rustchain-sdk = { path = "../../sdk", version = "0.1.0" }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
ed25519-dalek = "2.0"
bip39 = "2.0"
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }
dirs = "5.0"
rpassword = "7.0"

[dev-dependencies]
tempfile = "3.0"

[[bin]]
name = "rustchain-wallet"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"